fix: Make box shadow of global button styles visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ button {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
     transition: all 0.3s;
 
@@ -17,5 +17,5 @@ button {
 button:hover {
     cursor: pointer;
     scale: 1.05;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
